--- a/usher-common/usher-common-util/实验室孵化模块.md
+++ b/usher-common/usher-common-util/实验室孵化模块.md
@@ -11,3 +11,4 @@
 | sql协议解析并执行sql | mysql协议->sql->执行计划->执行 | 是    | [usher-common-protocol-mysql](..%2Fusher-common-protocol%2Fusher-common-protocol-mysql) |
 | 实例池           | 基本无代码入侵的实例池            | 否    | [usher-common-util-obj-pool](usher-common/usher-common-util/usher-common-util-obj-pool) |
 | 语法树解析         | 解析项目类,方法关系             | 是    | [usher-common-util-ast](usher-common/usher-common-util/usher-common-util-ast)           |
+| 自定义流          | 自定义流,可以自由支持流操作         | 否    | [usher-common-util-ustream](usher-common-util-ustream)                                  |
