--- a/usher-service/usher-service-all/多项目统一启动服务.md
+++ b/usher-service/usher-service-all/多项目统一启动服务.md
@@ -20,7 +20,7 @@ maven-dependency-plugin插件 添加 executions中的execution
             <artifactItem>
                 <groupId>team.opentech.usher</groupId>
                 <artifactId>usher-web</artifactId>
-                <version>2.1.0.2.usher</version>
+                <version>2.1.0.2.usher-SNAPSHOT</version>
                 <overWrite>false</overWrite>
                 <outputDirectory>${project.build.directory}/classes/webapp/usher-web</outputDirectory>
                 <excludes>
